src/test/rustdoc-ui/assoc-item-not-in-scope.stderr
warning: documentation for `f` links to item `S::fmt` which will not have documentation generated
  --> $DIR/assoc-item-not-in-scope.rs:12:18
   |
LL |     /// Link to [`S::fmt`]
   |                  ^^^^^^^^ this item is will not be documented
   |
   = note: `#[warn(rustdoc::private_intra_doc_links)]` on by default
   = note: `S::fmt` may be in a private module with all re-exports marked as `#[doc(no_inline)]`

warning: documentation for `f` links to item `S::fmt` which will not have documentation generated
  --> $DIR/assoc-item-not-in-scope.rs:20:18
   |
LL |     /// Link to [`S::fmt`]
   |                  ^^^^^^^^ this item is will not be documented
   |
   = note: `S::fmt` may be in a private module with all re-exports marked as `#[doc(no_inline)]`

error: unresolved link to `S::fmt`
  --> $DIR/assoc-item-not-in-scope.rs:4:15
   |
LL | /// Link to [`S::fmt`]
   |               ^^^^^^ the struct `S` has no field or associated item named `fmt`
   |
note: the lint level is defined here
  --> $DIR/assoc-item-not-in-scope.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 2 warnings emitted

